force-app/main/default/objects/School_Object__c/fields/Dollars_Processed__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Processed__c</fullName>
    <description>@Dollars_Processed__c = to_currency(v1_dollars_processed + v2_dollars_processed)
Populated by Eng job.</description>
    <label>Dollars Processed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>