force-app/main/default/objects/School_Object__c/fields/Dollars_Processed_Online__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Processed_Online__c</fullName>
    <label>Dollars Processed Online</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>