force-app/main/default/objects/School_Object__c/fields/ec_active_subs_term_lengths__c.field-meta.xml
<CustomField>
    <fullName>ec_active_subs_term_lengths__c</fullName>
    <label>ec active subs term lengths</label>
    <length>255</length>
    <type>Text</type>
</CustomField>