force-app/main/default/objects/School_Object__c/fields/ec_active_supplements__c.field-meta.xml
<CustomField>
    <fullName>ec_active_supplements__c</fullName>
    <label>ec active supplements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>