force-app/main/default/objects/School_Object__c/fields/ec_current_sub_expire_at__c.field-meta.xml
<CustomField>
    <fullName>ec_current_sub_expire_at__c</fullName>
    <label>ec current sub expire at</label>
    <type>DateTime</type>
</CustomField>