force-app/main/default/objects/School_Object__c/fields/ec_current_sub_first_theme_month__c.field-meta.xml
<CustomField>
    <fullName>ec_current_sub_first_theme_month__c</fullName>
    <label>ec current sub first theme month</label>
    <type>DateTime</type>
</CustomField>