force-app/main/default/objects/School_Object__c/fields/ec_customer_since__c.field-meta.xml
<CustomField>
    <fullName>ec_customer_since__c</fullName>
    <label>ec customer since</label>
    <type>DateTime</type>
</CustomField>