force-app/main/default/objects/School_Object__c/fields/ec_customer_status__c.field-meta.xml
<CustomField>
    <fullName>ec_customer_status__c</fullName>
    <label>ec customer status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>