force-app/main/default/objects/School_Object__c/fields/ec_last_shipped_at__c.field-meta.xml
<CustomField>
    <fullName>ec_last_shipped_at__c</fullName>
    <label>ec last shipped at</label>
    <type>DateTime</type>
</CustomField>