force-app/main/default/objects/School_Object__c/fields/ec_monthly_gross_ship_revenue__c.field-meta.xml
<CustomField>
    <fullName>ec_monthly_gross_ship_revenue__c</fullName>
    <label>ec monthly gross ship revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>