force-app/main/default/objects/School_Object__c/fields/ec_number_active_subs__c.field-meta.xml
<CustomField>
    <fullName>ec_number_active_subs__c</fullName>
    <label>ec number active subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>