force-app/main/default/objects/School_Object__c/fields/Enforces_Autopay__c.field-meta.xml
<CustomField>
    <fullName>Enforces_Autopay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by DataEng, it identifies schools already enrolled in billing.</description>
    <inlineHelpText>Populated by DataEng, it identifies schools already enrolled in billing.</inlineHelpText>
    <label>Enforces Autopay</label>
    <type>Checkbox</type>
</CustomField>