force-app/main/default/objects/School_Object__c/fields/Fifth_Billing_Plan_Set_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Billing_Plan_Set_Up_Date__c</fullName>
    <description>Date the fifth billing plan was set up.</description>
    <inlineHelpText>Date the fifth billing plan was set up.</inlineHelpText>
    <label>Fifth Billing Plan Set Up Date</label>
    <type>Date</type>
</CustomField>