force-app/main/default/objects/School_Object__c/fields/First_Rate_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Rate_Added_Date__c</fullName>
    <description>Date when a rate is added into the product</description>
    <label>First Rate Added Date</label>
    <type>Date</type>
</CustomField>