force-app/main/default/objects/School_Object__c/fields/Guardian_Added_Count__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Added_Count__c</fullName>
    <label># Parents Added</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>