force-app/main/default/objects/School_Object__c/fields/Guardian_Invited_Count__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Invited_Count__c</fullName>
    <label># Parents Invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>