force-app/main/default/objects/School_Object__c/fields/Guardians_Activated_Per_Student__c.field-meta.xml
<CustomField>
    <fullName>Guardians_Activated_Per_Student__c</fullName>
    <label>Guardians Activated Per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>