force-app/main/default/objects/School_Object__c/fields/Guardians_Activated_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Guardians_Activated_Threshold_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parents Activated Threshold Met_x</label>
    <type>Checkbox</type>
</CustomField>