force-app/main/default/objects/School_Object__c/fields/Guardians_Added_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Guardians_Added_Threshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parents Added Threshold Met_x</label>
    <type>Checkbox</type>
</CustomField>