force-app/main/default/objects/School_Object__c/fields/hash_id__c.field-meta.xml
<CustomField>
    <fullName>hash_id__c</fullName>
    <description>32 character md5 hash (hash_id) within dev and production</description>
    <label>hash id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>