force-app/main/default/objects/School_Object__c/fields/High_Value_NRR_Pod__c.field-meta.xml
<CustomField>
    <fullName>High_Value_NRR_Pod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by DW team.</description>
    <label>High Value NRR Pod</label>
    <type>Checkbox</type>
</CustomField>