force-app/main/default/objects/School_Object__c/fields/Increase_Parent_Adoption_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Increase_Parent_Adoption_Threshold_Met__c</fullName>
    <label>Increase Parent Adoption Threshold Met</label>
    <type>DateTime</type>
</CustomField>