force-app/main/default/objects/School_Object__c/fields/Initial_Students_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Students_Threshold_Met_Date__c</fullName>
    <label>Initial Students Threshold Met Date</label>
    <type>DateTime</type>
</CustomField>