force-app/main/default/objects/School_Object__c/fields/Initiate_Parent_Signups_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Parent_Signups_Threshold_Met__c</fullName>
    <label>Initiate Parent Signups Threshold Met</label>
    <type>DateTime</type>
</CustomField>