force-app/main/default/objects/School_Object__c/fields/Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Date__c</fullName>
    <description>Date the last time an activity was logged.</description>
    <inlineHelpText>Date the last time an activity was logged.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>