force-app/main/default/objects/School_Object__c/fields/Last_Mobile_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Mobile_Activity_Date__c</fullName>
    <description>Date of last tracked mobile activity on a non student (teacher/admin).</description>
    <inlineHelpText>Date of last tracked mobile activity on a non student (teacher/admin).</inlineHelpText>
    <label>Last Mobile Activity Date</label>
    <type>DateTime</type>
</CustomField>