force-app/main/default/objects/School_Object__c/fields/Last_Offline_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Offline_Payment_Date__c</fullName>
    <description>Indicates when the school last processed offline payment</description>
    <inlineHelpText>Indicates when the school last processed offline payment</inlineHelpText>
    <label>Last Offline Payment Date</label>
    <type>Date</type>
</CustomField>