force-app/main/default/objects/School_Object__c/fields/Last_Online_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Online_Payment_Date__c</fullName>
    <description>Indicates when the school last processed online payment</description>
    <inlineHelpText>Indicates when the school last processed online payment</inlineHelpText>
    <label>Last Online Payment Date</label>
    <type>Date</type>
</CustomField>