force-app/main/default/objects/School_Object__c/fields/Last_Visit_To_Billing_Page__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_To_Billing_Page__c</fullName>
    <description>Last time school visited %mybrightwheel.com/billing</description>
    <inlineHelpText>Last time school visited %mybrightwheel.com/billing</inlineHelpText>
    <label>Last Visit To Billing Page</label>
    <type>DateTime</type>
</CustomField>