force-app/main/default/objects/School_Object__c/fields/Last_Web_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Web_Activity_Date__c</fullName>
    <description>Date of last tracked web activity on a non student (teacher/admin).</description>
    <inlineHelpText>Date of last tracked web activity on a non student (teacher/admin).</inlineHelpText>
    <label>Last Web Activity Date</label>
    <type>DateTime</type>
</CustomField>