force-app/main/default/objects/School_Object__c/fields/Latest_Onboarding_Step_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Latest_Onboarding_Step_Completed_At__c</fullName>
    <description>The date/time that the latest onboarding progress step was completed</description>
    <inlineHelpText>The date/time that the latest onboarding progress step was completed</inlineHelpText>
    <label>Latest Onboarding Step Completed At</label>
    <type>DateTime</type>
</CustomField>