force-app/main/default/objects/School_Object__c/fields/Log_First_Activity_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Log_First_Activity_Threshold_Met__c</fullName>
    <label>Log First Activity Threshold Met</label>
    <type>DateTime</type>
</CustomField>