force-app/main/default/objects/School_Object__c/fields/Log_More_Activities_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Log_More_Activities_Threshold_Met__c</fullName>
    <label>Log More Activities Threshold Met</label>
    <type>DateTime</type>
</CustomField>