force-app/main/default/objects/School_Object__c/fields/Logging_Actions_Average__c.field-meta.xml
<CustomField>
    <fullName>Logging_Actions_Average__c</fullName>
    <inlineHelpText>The average number of activities and messages, combined, per active student, within the prior 7 business days</inlineHelpText>
    <label>Logging Actions Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>