force-app/main/default/objects/School_Object__c/fields/LOGIC_associated_accounts__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_associated_accounts__c</fullName>
    <description>Populated by rollup helper</description>
    <label>LOGIC associated accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>