force-app/main/default/objects/School_Object__c/fields/LOGIC_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Email_Domain__c</fullName>
    <description>Strip domain from owner email</description>
    <formula>SUBSTITUTE(Owner_Email__c, LEFT(Owner_Email__c, FIND(&quot;@&quot;, Owner_Email__c)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOGIC Email Domain</label>
    <type>Text</type>
</CustomField>