force-app/main/default/objects/School_Object__c/fields/Manual_Onboarding_Attempt_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Manual_Onboarding_Attempt_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Onboarding Attempt Trigger</label>
    <type>Checkbox</type>
</CustomField>