force-app/main/default/objects/School_Object__c/fields/Meds_Count__c.field-meta.xml
<CustomField>
    <fullName>Meds_Count__c</fullName>
    <label>ac_meds_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>