force-app/main/default/objects/School_Object__c/fields/Message_Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Sent_Count__c</fullName>
    <label>message_sent_count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>