force-app/main/default/objects/School_Object__c/fields/Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Spend__c</fullName>
    <label>Monthly Spend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>