force-app/main/default/objects/School_Object__c/fields/Most_Recent_SaaS_Winback_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SaaS_Winback_Date__c</fullName>
    <label>Most Recent SaaS Winback Date</label>
    <type>Date</type>
</CustomField>