force-app/main/default/objects/School_Object__c/fields/Multi_Site__c.field-meta.xml
<CustomField>
    <fullName>Multi_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Site</label>
    <type>Checkbox</type>
</CustomField>