force-app/main/default/objects/School_Object__c/fields/Nap_Count__c.field-meta.xml
<CustomField>
    <fullName>Nap_Count__c</fullName>
    <label>ac_nap_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>