force-app/main/default/objects/School_Object__c/fields/Note_Count__c.field-meta.xml
<CustomField>
    <fullName>Note_Count__c</fullName>
    <label>ac_note_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>