force-app/main/default/objects/School_Object__c/fields/Number_of_Billing_Plans__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Billing_Plans__c</fullName>
    <description>Number of billing plans the school has set up.</description>
    <inlineHelpText>Number of billing plans the school has set up.</inlineHelpText>
    <label>Number of Billing Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>