force-app/main/default/objects/School_Object__c/fields/Observation_Count__c.field-meta.xml
<CustomField>
    <fullName>Observation_Count__c</fullName>
    <label>ac_observation_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>