force-app/main/default/objects/School_Object__c/fields/of_Students_at_Billing_Activation__c.field-meta.xml
<CustomField>
    <fullName>of_Students_at_Billing_Activation__c</fullName>
    <description>The number of active students at the time of billing activation, populated by the Analytics team.</description>
    <inlineHelpText>The number of active students at the time of billing activation, populated by the Analytics team.</inlineHelpText>
    <label># of Students at Billing Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>