force-app/main/default/objects/School_Object__c/fields/of_Total_Staff__c.field-meta.xml
<CustomField>
    <fullName>of_Total_Staff__c</fullName>
    <label># of Total Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>