force-app/main/default/objects/School_Object__c/fields/Onboarding_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Funnel_Stage__c</fullName>
    <description>Onboarding funnel stage from analytics</description>
    <label>Onboarding Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_funnel_stages</valueSetName>
    </valueSet>
</CustomField>