force-app/main/default/objects/School_Object__c/fields/One_Billing_Cycle_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Billing_Cycle_Threshold_Met_Date__c</fullName>
    <description>Billing funnel - Indicates the date when school met one billing cycle threshold</description>
    <label>One Billing Cycle Threshold Met Date</label>
    <type>DateTime</type>
</CustomField>