force-app/main/default/objects/School_Object__c/fields/Opened_EC_Learning_Banner_no_FF_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_EC_Learning_Banner_no_FF_Date__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot. Last date opened EC Learning banner evergreen but does not form fill</description>
    <inlineHelpText>Last date opened EC Learning banner evergreen but does not form fill</inlineHelpText>
    <label>Opened EC Learning Banner no FF Date</label>
    <type>Date</type>
</CustomField>