force-app/main/default/objects/School_Object__c/fields/Original_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Bill_Date__c</fullName>
    <description>Original subscription bill date</description>
    <inlineHelpText>Original subscription bill date</inlineHelpText>
    <label>Original Bill Date</label>
    <type>DateTime</type>
</CustomField>