force-app/main/default/objects/School_Object__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <label>Owner email</label>
    <type>Email</type>
</CustomField>