force-app/main/default/objects/School_Object__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <description>@Owner_First_Name__c = @owner.first_name
Populated by Eng job and Analytics job.</description>
    <label>Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>