force-app/main/default/objects/School_Object__c/fields/Parent_on_Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>Parent_on_Auto_Pay__c</fullName>
    <description>Percentage of Parents on Auto Pay.</description>
    <label>Parent on Auto Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>