force-app/main/default/objects/School_Object__c/fields/Parent_with_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Parent_with_Payment_Method__c</fullName>
    <description>Percentage of Parents with Payment Method.</description>
    <label>Parent with Payment Method</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>