force-app/main/default/objects/School_Object__c/fields/Parents_Activated_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Parents_Activated_Threshold_Met_Date__c</fullName>
    <description>The date the school first hit the parents activated threshold criteria</description>
    <inlineHelpText>The date the school first hit the parents activated threshold criteria</inlineHelpText>
    <label>Parents Activated Threshold Met Date</label>
    <type>DateTime</type>
</CustomField>