force-app/main/default/objects/School_Object__c/fields/Parents_Add_Payment_Method_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Parents_Add_Payment_Method_Threshold_Met__c</fullName>
    <label>Parents Add Payment Method Threshold Met</label>
    <type>DateTime</type>
</CustomField>