force-app/main/default/objects/School_Object__c/fields/Parents_Added_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Parents_Added_Threshold_Met_Date__c</fullName>
    <description>The date the school first hit the parents added threshold criteria</description>
    <inlineHelpText>The date the school first hit the parents added threshold criteria</inlineHelpText>
    <label>Parents Added Threshold Met Date</label>
    <type>DateTime</type>
</CustomField>