force-app/main/default/objects/School_Object__c/fields/Parents_Pay_Online_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Parents_Pay_Online_Threshold_Met__c</fullName>
    <label>Parents Pay Online Threshold Met</label>
    <type>DateTime</type>
</CustomField>