force-app/main/default/objects/School_Object__c/fields/Payers_with_1_Online_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Payers_with_1_Online_Payment_Made__c</fullName>
    <label>Payers with 1+ Online Payment Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>