force-app/main/default/objects/School_Object__c/fields/Payment_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period_End_Date__c</fullName>
    <label>Payment Period End Date</label>
    <type>DateTime</type>
</CustomField>