force-app/main/default/objects/School_Object__c/fields/pd_monthly_sub_amt_per_school__c.field-meta.xml
<CustomField>
    <fullName>pd_monthly_sub_amt_per_school__c</fullName>
    <label>PD Subscription Amount Per School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>