force-app/main/default/objects/School_Object__c/fields/pd_subscription_end_date__c.field-meta.xml
<CustomField>
    <fullName>pd_subscription_end_date__c</fullName>
    <label>PD Subscription End Date</label>
    <type>DateTime</type>
</CustomField>