force-app/main/default/objects/School_Object__c/fields/pd_subscription_rec_interval__c.field-meta.xml
<CustomField>
    <fullName>pd_subscription_rec_interval__c</fullName>
    <label>PD Subscription Recurring Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>