force-app/main/default/objects/School_Object__c/fields/pd_subscription_status__c.field-meta.xml
<CustomField>
    <fullName>pd_subscription_status__c</fullName>
    <label>PD Subscription Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>