force-app/main/default/objects/School_Object__c/fields/Photo_Count__c.field-meta.xml
<CustomField>
    <fullName>Photo_Count__c</fullName>
    <label>Photo Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>