force-app/main/default/objects/School_Object__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>