force-app/main/default/objects/School_Object__c/fields/Premium_Customer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Premium_Customer_Start_Date__c</fullName>
    <description>Populated by DataEng.</description>
    <inlineHelpText>Date of first premium or trial subscription. The only time it will change is if a school changes organizations - since subscriptions are at the organization level, if a school changes organizations, it inherits whatever subscription data that the organization has.</inlineHelpText>
    <label>Premium Customer Start Date</label>
    <type>Date</type>
</CustomField>