force-app/main/default/objects/School_Object__c/fields/Premium_ECE__c.field-meta.xml
<CustomField>
    <fullName>Premium_ECE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>School Object has met the definition of a Premium ECE in its current state</description>
    <label>Premium ECE</label>
    <type>Checkbox</type>
</CustomField>