force-app/main/default/objects/School_Object__c/fields/Premium_ECE_Non_Active_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Premium_ECE_Non_Active_Date_Stamp__c</fullName>
    <label>Premium ECE Non Active Date Stamp</label>
    <type>Date</type>
</CustomField>