force-app/main/default/objects/School_Object__c/fields/Premium_ECE_Non_Active_Reason__c.field-meta.xml
<CustomField>
    <fullName>Premium_ECE_Non_Active_Reason__c</fullName>
    <label>Premium ECE Non Active Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>