force-app/main/default/objects/School_Object__c/fields/Premium_Start_Date_PST__c.field-meta.xml
<CustomField>
    <fullName>Premium_Start_Date_PST__c</fullName>
    <label>Premium Start Date_x</label>
    <type>Date</type>
</CustomField>