force-app/main/default/objects/School_Object__c/fields/Premium_Target_Updated_Definition__c.field-meta.xml
<CustomField>
    <fullName>Premium_Target_Updated_Definition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integrated field that advises if school is a Premium Target based upon business criteria</description>
    <inlineHelpText>Integration field from product that identifies a Premium Target based on the definition of 10+ students</inlineHelpText>
    <label>Premium Target - Updated Definition</label>
    <type>Checkbox</type>
</CustomField>