force-app/main/default/objects/School_Object__c/fields/Previous_MRR__c.field-meta.xml
<CustomField>
    <fullName>Previous_MRR__c</fullName>
    <label>Previous MRR_x</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>