force-app/main/default/objects/School_Object__c/fields/Product_Billing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Product_Billing_Opt_In__c</fullName>
    <label>Product Billing Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>