force-app/main/default/objects/School_Object__c/fields/Program_type__c.field-meta.xml
<CustomField>
    <fullName>Program_type__c</fullName>
    <description>Program type from PTL sign up form</description>
    <label>Program type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>