force-app/main/default/objects/School_Object__c/fields/Ratio_Students_with_Activated_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ratio_Students_with_Activated_Parent__c</fullName>
    <description>This shows the % of active students with activated parents</description>
    <inlineHelpText>This shows the % of active students with activated parents</inlineHelpText>
    <label>Ratio Students with Activated Parent</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>