force-app/main/default/objects/School_Object__c/fields/Recently_Expired_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Recently_Expired_Coupon__c</fullName>
    <description>Most recently expired coupon code</description>
    <inlineHelpText>Most recently expired coupon code</inlineHelpText>
    <label>Recently Expired Coupon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>