force-app/main/default/objects/School_Object__c/fields/Recently_Expired_Coupon_Duration__c.field-meta.xml
<CustomField>
    <fullName>Recently_Expired_Coupon_Duration__c</fullName>
    <description>The length of the coupon duration of most recently expired coupon</description>
    <inlineHelpText>The length of the coupon duration of most recently expired coupon</inlineHelpText>
    <label>Recently Expired Coupon Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>