force-app/main/default/objects/School_Object__c/fields/Recently_Expired_Coupon_End__c.field-meta.xml
<CustomField>
    <fullName>Recently_Expired_Coupon_End__c</fullName>
    <description>Most recently expired coupon end date</description>
    <inlineHelpText>Most recently expired coupon end date</inlineHelpText>
    <label>Recently Expired Coupon End</label>
    <type>DateTime</type>
</CustomField>